--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+}
+
+*::-webkit-scrollbar {
+	display: none;
+}
+
+body {
+	background-color: #e7e5e4;
+}
+
+.signature {
+	font-family: cursive;
+	font-size: 1.6em;
+	font-style: normal;
+}
 @layer components {
 	.frames,
 	.frame {
